# concrete-agent

./: .dockerignore  .env.example  .env.template  .gitignore  .pr_agent.toml  .replit  502_FIX_SUMMARY.md  ANALYSIS_README.md  API_DOCUMENTATION.md  API_SETUP_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_VALIDATION_REPORT.md  AUDIT_CHECKLIST.md  AUDIT_VISUAL_SUMMARY.md  BEADS_SYSTEM_SUMMARY.md  BEFORE_AFTER_CONTRACT.md  BEFORE_AFTER_ERROR_HANDLING.md  CHANGELOG.md  CLEANUP_VERIFICATION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  DEPENDENCY_AUDIT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  Dockerfile  Dockerfile.backend  EMPTY_FILE_PARAMS_FIX.md  ERROR_422_EXPLAINED.md  EXECUTE_METHOD_IMPLEMENTATION.md  FILE_STRUCTURE.md  FINAL_CLEANUP_SUMMARY.txt  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FIXES_DOCUMENTATION.md  FIXES_README.md  FIXES_SUMMARY.json  FIXES_SUMMARY.md  (+101 more)
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py
backend/app/core/: __init__.py  database.py  llm_service.py  logging_config.py  orchestrator.py  prompt_loader.py  utils.py
backend/app/knowledgebase/: mechanization.json
backend/app/models/: __init__.py  analysis_model.py  file_model.py  user_model.py
backend/app/prompts/: default_prompt.txt  system_prompt.txt
backend/app/routers/: status_router.py  unified_router.py
backend/app/schemas/: user_schema.py
backend/tests/: test_imports.py
(+415 files in other folders)
